[package]
name = "INDEXER"
version = "0.1.0"
edition = "2021"
authors = ["Mohd Azhar Shaikh azharshaikh8120.shaikh@gmail.com"]
description = "A real-time Polygon blockchain data indexer"

[dependencies]
tokio = { version = "1", features = ["full"] }
web3 = "0.19"
sqlite = "0.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.6"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
decimal = "2.1"
thiserror = "1.0"
tokio-stream = "0.1"
futures = "0.3"
hex = "0.4"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true